# cunumeric_jl_wrapper

./: .gitignore  CMakeLists.txt  README.md
include/: accessors.h  ndarray_c_api.h  types.h  ufi.h
src/: cuda.cpp  ndarray.cpp  types.cpp  wrapper.cpp
